force-app/main/default/objects/Executivo_de_vendas__c/Executivo_de_vendas__c.object-meta.xml
<CustomObject>
    <label>Executivo de vendas</label>
    <nameField>
        <label>Nome do Executivo de vendas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executivos de vendas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>