force-app/main/default/objects/Executivo_de_vendas__c/fields/Ramo_de_atua_o__c.field-meta.xml
<CustomField>
    <fullName>Ramo_de_atua_o__c</fullName>
    <label>Ramo de atuação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Varejo</fullName>
            </value>
            <value>
                <fullName>Cargas Especializadas</fullName>
            </value>
            <value>
                <fullName>Eletrônico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>