force-app/main/default/objects/Executivo_de_vendas__c/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <label>Região</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Supervis_o__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SP/ZONA SUL</fullName>
            </value>
            <value>
                <fullName>SP/CENTRO E LESTE</fullName>
            </value>
            <value>
                <fullName>SP/ZONA NORTE</fullName>
            </value>
            <value>
                <fullName>SP/ZONA OESTE</fullName>
            </value>
            <value>
                <fullName>PIRACICABA/SOROCABA</fullName>
            </value>
            <value>
                <fullName>JUNDIAI</fullName>
            </value>
            <value>
                <fullName>GUARULHOS I</fullName>
            </value>
            <value>
                <fullName>GUARULHOS II</fullName>
            </value>
            <value>
                <fullName>VALE DO PARAIBA</fullName>
            </value>
            <value>
                <fullName>SCS, SANTO ANDRE</fullName>
            </value>
            <value>
                <fullName>RJ - CENTRO / ZONA NORTE</fullName>
            </value>
            <value>
                <fullName>RJ - ZONA BAIXADA</fullName>
            </value>
            <value>
                <fullName>NORTE FLUMINENSE DE RIO BONITO, CAMPOS</fullName>
            </value>
            <value>
                <fullName>VITORIA E GRANDE VITORIA</fullName>
            </value>
            <value>
                <fullName>NORTE E NOROESTE DO ESPIRITO SANTO</fullName>
            </value>
            <value>
                <fullName>RJ - ZONA OESTE</fullName>
            </value>
            <value>
                <fullName>RJ - ZONA SUL</fullName>
            </value>
            <value>
                <fullName>ABCII</fullName>
            </value>
            <value>
                <fullName>ACRE / RONDONIA / RORAIMA</fullName>
            </value>
            <value>
                <fullName>ALAGOAS / SERGIPE</fullName>
            </value>
            <value>
                <fullName>ARACAJU/SERGIPE</fullName>
            </value>
            <value>
                <fullName>BAHIA I</fullName>
            </value>
            <value>
                <fullName>BAHIA II</fullName>
            </value>
            <value>
                <fullName>BAHIA III</fullName>
            </value>
            <value>
                <fullName>BAURU</fullName>
            </value>
            <value>
                <fullName>CAMPINAS</fullName>
            </value>
            <value>
                <fullName>CAMPINAS II</fullName>
            </value>
            <value>
                <fullName>CASCAVEL</fullName>
            </value>
            <value>
                <fullName>CAXIAS DO SUL</fullName>
            </value>
            <value>
                <fullName>CEARA / MARANHÃO / PIAUI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>