force-app/main/default/objects/Executivo_de_vendas__c/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <label>Regional</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MGRJES</fullName>
            </value>
            <value>
                <fullName>NONECO</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>SPI</fullName>
            </value>
            <value>
                <fullName>SUL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>