force-app/main/default/objects/Executivo_de_vendas__c/fields/Supervis_o__c.field-meta.xml
<CustomField>
    <fullName>Supervis_o__c</fullName>
    <label>Supervisão</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Regional__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>NEI</fullName>
            </value>
            <value>
                <fullName>NEII</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>RJES</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>SPC</fullName>
            </value>
            <value>
                <fullName>SPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>