force-app/main/default/objects/Executivo_de_vendas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Telefone__c</columns>
    <columns>Email__c</columns>
    <columns>UF__c</columns>
    <columns>Regiao__c</columns>
    <columns>Regional__c</columns>
    <columns>Supervis_o__c</columns>
    <columns>Ramo_de_atua_o__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>